# financial-ml

./: .gitignore  Makefile  README.md  Requirements.txt  downloadPortfolio.py  drawPrice.py  drawStonks.py  getPortfolio.py  getStonkValues.py  getStonks.py  plotCurrentPrice.py  plotForecasts.py  pyproject.toml  updatePortfolio.py
docs/: decisions.md  experiments.md  methodology.md  results.md
legacy-code/: README.md
legacy-code/cfg/: config_template
legacy-code/src/: colours.py  drawStonks.py  plotForecasts.py  search_google.py  updatePortfolio.py
scripts/: generate_final_figures.py
src/: colours.py  downloadPortfolio.py  downloadPortfolio.py~  drawStonks.py  getPortfolio.py  getStonkValues.py  plotCurrentPrice.py  plotForecasts.py  portfolio.py  search_google.py  updatePortfolio.py  variables.py
src/financial_ml/: __main__.py  common.py  feature_importance.py  fundamentals.py  main.py  markets.py  models.py  portfolio_construction.py  portfolio_diagnostics.py  train.py
src/financial_ml/cli/: parser.py  validators.py
src/financial_ml/data/: __init__.py  features.py  loaders.py  validation.py
src/financial_ml/data/collectors/: __init__.py  (+4 more)
src/financial_ml/evaluation/: analyze.py  feature_analysis.py
src/financial_ml/models/: __init__.py  definitions.py  training.py
src/financial_ml/portfolio/: __init__.py  backtest.py  construction.py  diagnostics.py  performance.py  visualization.py
src/financial_ml/utils/: config.py  helpers.py  logging.py  paths.py
src/stonks/: __main__.py  common.py  fundamentals.py  markets.py  store_info.py  train.py
