[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-ml"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "yfinance",
  "requests",
  "pyarrow",
  "scikit-learn",
]

[project.scripts]
financial-ml = "financial_ml.main:main"

[tool.setuptools.packages.find]
where = ["src"]
